--- a/styles.css
+++ b/styles.css
@@ -12,4 +12,71 @@
     grid-template-rows: repeat(6, 85px);
     grid-gap: 0px;
     justify-content: center;
+    padding-top: 10px;
+}
+
+#connect4Grid button{
+    border-radius: 60%;
+}
+
+
+#winnerGame{
+    display: none;
+    place-items: center;
+    position: fixed; 
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 85%;
+    z-index: 3;      /* stays above other content */
+    color:white;
+    pointer-events: none;
+}
+
+button{
+    border-radius: 10px;
+    border-width: 1px;
+}
+
+
+#resetConnect4{
+    display: none;
+    place-items: center;
+    position: fixed; 
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.673);
+    z-index: 2;      /* stays above other content */
+}
+
+#beginConnect4 {
+    display: grid;
+    place-items: center;
+    position: fixed; 
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 2;      /* stays above other content */
+}
+
+#resetButton{
+    width: 250px;
+    height: 5vh;
+}
+#playConnect4{
+    width: 150px;
+    height: 50px;
+
+}
+
+#connect4Background{
+    display: none;
+    place-items: center;
+    justify-self: center;
+    width: 625px;
+    height: 555px;
+    background-color: darkblue;
 }
