--- a/styles.css
+++ b/styles.css
@@ -53,7 +53,7 @@ button{
 
 #beginConnect4 {
     display: grid;
-    place-items: center;
+    place-items:center;
     position: fixed; 
     top: 0;
     left: 0;
@@ -79,4 +79,18 @@ button{
     width: 625px;
     height: 555px;
     background-color: darkblue;
+}
+
+#nameInput{
+    display: flex;
+    justify-content: space-evenly;
+    width: 100%;
+}
+
+input{
+    border-radius: 5px;
+    font-size: 32px;
+    width: 500px;
+    height: 50px;
+    text-align: center;
 }
